--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+      <!--Edit div id to add cat image here-->
+      <div id="catImageContainer"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
